fix: update font-weight for wp-caption text in general styles to enhance readability

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -168,7 +168,7 @@ a:active {
 	margin: 0.8075em 0;
 	font-size: 14px;
 	font-style: italic;
-	font-weight: 500;
+	font-weight: 700;
 	line-height: 1.3;
 }
 
